fixed header spacing and changed font

--- a/frontend_shop/styles/globals.css
+++ b/frontend_shop/styles/globals.css
@@ -1,9 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap');
+
 html,
 body, * {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Chelsea Market', cursive;;
     box-sizing: border-box;
 }
 
@@ -31,11 +32,15 @@ width: 100%;
 }
 
 .header-container{
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.header-h1{
+  font-family: 'Chelsea Market', cursive;
 }
 
 @media screen and (max-width:800px){
